// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <div
    data-reactroot=""
  >
    <div>
      <h3>
        Blocks
      </h3>
      <p>
        (Only showing blocks with transactions)
      </p>
      <ul>
        <li
          class="list-item"
        >
          <!-- react-text: 7 -->
          1
          <!-- /react-text -->
          <!-- react-text: 8 -->
          - 
          <!-- /react-text -->
          <span
            class="hash"
          >
            0x2a
          </span>
        </li>
        <li
          class="list-item"
        >
          <!-- react-text: 11 -->
          2
          <!-- /react-text -->
          <!-- react-text: 12 -->
          - 
          <!-- /react-text -->
          <span
            class="hash"
          >
            0x2a
          </span>
        </li>
      </ul>
      <p>
        <!-- react-text: 15 -->
        Loaded blocks 
        <!-- /react-text -->
        <!-- react-text: 16 -->
        1
        <!-- /react-text -->
        <!-- react-text: 17 -->
        to 
        <!-- /react-text -->
        <!-- react-text: 18 -->
        0
        <!-- /react-text -->
        <!-- react-text: 19 -->
        .
        <!-- /react-text -->
      </p>
      <button>
        Load older blocks
      </button>
    </div>
    <div>
      <h3>
        Addresses
      </h3>
      <input
        type="text"
        placeholder="Add address"
        value=""
      />
      <button>
        Add
      </button>
      <ul>
        <li
          class="list-item hash"
        >
          0x1234567890
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders loading state correctly 1`] = `
<div>
  <div
    data-reactroot=""
  >
    <div>
      <h3>
        Blocks
      </h3>
      <p>
        (Only showing blocks with transactions)
      </p>
      <span>
        Loading blocks...
      </span>
      <ul />
      <p>
        <!-- react-text: 8 -->
        Loaded blocks 
        <!-- /react-text -->
        <!-- react-text: 9 -->
        0
        <!-- /react-text -->
        <!-- react-text: 10 -->
        to 
        <!-- /react-text -->
        <!-- react-text: 11 -->
        0
        <!-- /react-text -->
        <!-- react-text: 12 -->
        .
        <!-- /react-text -->
      </p>
      <button>
        Load older blocks
      </button>
    </div>
    <div>
      <h3>
        Addresses
      </h3>
      <input
        type="text"
        placeholder="Add address"
        value=""
      />
      <button>
        Add
      </button>
      <ul />
    </div>
  </div>
</div>
`;
